[package]
name = "codecrafters-git"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.91"

[dependencies]
flate2 = "1.0.34"                                 # compression
pretty_env_logger = "0.5"
log = "0.4"
clap = { version = "4.5", features = ["derive"] }
sha1 = "0.10.6"
